syntax = "proto3";

package grapevineer;

import "google/api/annotations.proto";

import "player.proto";
import "og_image.proto";
import "flower_meaning.proto";
import "line.proto";
import "openai.proto";

option go_package = "github.com/esh2n/grapevineer/gen/go/grapevineer";

service Grapevineer {
    rpc GetOGImage(GetOGImageRequest) returns (GetOGImageResponse) {
        option (google.api.http) = {
            get: "/v1/og_image"
        };
    }
    rpc GetFlowerMeaningByDate(GetFlowerMeaningByDateRequest) returns (GetFlowerMeaningByDateResponse) {
        option (google.api.http) = {
            get: "/v1/flower_meaning/{date}"
        };
    }
    rpc SendLineMessage(SendLineMessageRequest) returns (SendLineMessageResponse) {
        option (google.api.http) = {
            get: "/v1/line_message"
        };
    }
    rpc SendOpenAIMessage(SendOpenAIMessageRequest) returns (SendOpenAIMessageResponse) {
        option (google.api.http) = {
            get: "/v1/openai_message"
        };
    }
    rpc SetPlayer(SetPlayerRequest) returns (SetPlayerResponse) {
        option (google.api.http) = {
            post: "/v1/player"
        };
    }
    rpc GetAllPlayers(GetAllPlayersRequest) returns (GetAllPlayersResponse) {
        option (google.api.http) = {
            get: "/v1/players"
        };
    }
    rpc UpdatePlayer(UpdatePlayerRequest) returns (UpdatePlayerResponse) {
        option (google.api.http) = {
            put: "/v1/player"
        };
    }
    rpc GetPlayerInfo(GetPlayerInfoRequest) returns (GetPlayerInfoResponse) {
        option (google.api.http) = {
            get: "/v1/player_info"
        };
    }
}